tests/baselines/reference/ClassDeclaration24.errors.txt
==== tests/cases/compiler/ClassDeclaration24.ts (1 errors) ====
    class any {
          ~~~
!!! error TS2414: Class name cannot be 'any'
    }